# waypoint

./: README.md  pyproject.toml
.github/workflows/: on-push.yml  release.yml  validate-pipx-install.yml
src/: README.md
src/waypoint/: __init__.py  cli.py
test/: test_install_shell.py  test_wp_core.py
